# Django-Rest-Framework

./: README.md  pyproject.toml  requirements.txt
config/: models.py  settings.py  urls.py
config/settings/: base.py  local.py  prod.py
restaurants/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
reviews/: models.py  serializers.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
